--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-fileupload": "^1.4.0",
     "express-subdomain": "^1.0.5",
     "express-validator": "^7.0.1",
+    "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.2",
     "morgan": "^1.10.0",
