--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "passport": "^0.6.0",
     "passport-google-oauth": "^2.0.0",
     "passport-local": "^1.0.0",
+    "pdfkit": "^0.13.0",
+    "stripe": "^11.16.0",
     "winston": "^3.9.0"
   }
 }
