--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "passport-local": "^1.0.0",
     "pdfkit": "^0.13.0",
     "stripe": "^11.16.0",
+    "twilio": "^4.14.0",
+    "uuid": "^9.0.0",
     "winston": "^3.9.0"
   }
 }
